--- a/docs/roadmaps/2021Q2.md
+++ b/docs/roadmaps/2021Q2.md
@@ -159,6 +159,46 @@ and satisfy our objectives, without getting bogged down in theoretical details.
   - ATen --> Linalg lowerings.
   - Canonicalizations and other compiler optimizations
 
+
+### 2021Q2 Retrospective (added afterwards)
+
+- Model curriculum
+  - [✅] Formalize / publish curriculum to ease collaboration
+    - Note: See `frontends/pytorch/e2e_testing/torchscript`.
+  - [~] Incorporate end-to-end ASR (speech recognition) model into curriculum,
+    or program of similar complexity.
+    - Note: TorchScript'able machine translation model identified, but not
+      formally added.
+  - [✅] Incorporate representative quantized models into curriculum.
+    - Note: See `frontends/pytorch/e2e_testing/torchscript/quantized_models.py`
+- End-to-end execution of at least the simplest models in the curriculum.
+  - [✅] User annotation infrastructure for users to provide the compiler
+    information, such as shapes to seed shape inference.
+    - Note: See `frontends/pytorch/csrc/builder/class_annotator.cpp` and
+      `frontends/pytorch/python/torch_mlir/torchscript/annotations.py`.
+  - [✅] Fill out ATen dialect and `aten-recognize-kernels` pass.
+    - Note: Accomplished with significant design shift. See
+      [PR](https://github.com/llvm/mlir-npcomp/pull/214).
+  - [❌] ATen lowering to Linalg-on-tensors
+    - Implement a minimal amount of linalg-inspired abstractions in the "TCF"
+      dialect.
+    - Extend the linalg
+      [OpDSL tooling](https://llvm.discourse.group/t/rfc-linalg-opdsl/2966/6) to
+      enable us to programmatically emit shape validity checks.
+    - Note: Not enough programs / ops brought up yet to generalize.
+  - [✅] Shape/dtype inference
+    - As needed for other incremental objectives.
+    - Build a clear picture of the right place(s) in the longer-term compiler
+      pipeline for shape inference.
+    - Note: Need one major pass of this in the frontend at the torch level to
+      get ranks and dtypes, and then one later pass at the linalg level to
+      propagate specific sizes as much as possible.
+  - [✅] Canonicalizations and general compiler optimizations
+    - As needed for other incremental objectives.
+  - [✅] Backend choice: RefBackend or IREE candidates.
+    - Note: Used RefBackend this quarter due to simplicity of current programs +
+      some blocking IREE issues.
+
 ## RefBackend
 
 The npcomp reference backend (or "RefBackend") is perhaps the most confusing
