Clean up stale examples.
They were confusing users, and most didn't even work anymore.

--- a/frontends/pytorch/examples/resnet_inference.ipynb
+++ b/frontends/pytorch/examples/resnet_inference.ipynb
@@ -94,9 +94,7 @@
     "from mlir.passmanager import PassManager\n",
     "\n",
     "from torch_mlir_torchscript.annotations import annotate_args, export\n",
-    "from torch_mlir.torchscript_annotations import extract_annotations\n",
-    "\n",
-    "from npcomp.compiler.pytorch.backend.iree import IreeNpcompBackend"
+    "from torch_mlir.torchscript_annotations import extract_annotations"
    ]
   },
   {
