--- a/examples/resnet_inference.ipynb
+++ b/examples/resnet_inference.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "#  Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.\n",
     "#  See https://llvm.org/LICENSE.txt for license information.\n",
-    "#  SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception",
+    "#  SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception\n",
     "#  Also available under a BSD-style license. See LICENSE."
    ]
   },
